ops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globi-deployment
spec:
  selector:
    matchLabels:
      app: globi-app
  replicas: 3
  template:
    metadata:
      labels:
        app: globi-app
    spec:
      containers:
        - name: globi-app
          image: kasacka/globi-app:3.0
          ports:
            - containerPort: 3000
