ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globi-service
spec:
  selector:
    app: globi-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
