ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globi-ingress
spec:
  rules:
  - host: globi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: globi-service
            port:
              number: 3000
